# verifai-phd

./: .env.example  .gitignore  LICENCE  README.md  main.py  pyproject.toml  pytest.ini
.cursor/rules/: tdd.mdc  uv.mdc
api/: main.py
data/: debank-sources.json
docs/: ARD.md  BINARY_CLASSIFIER_IMPLEMENTATION.md  ExtensionPRD.md  LORA_IMPLEMENTATION_SUMMARY.md  LORA_INTEGRATION_GUIDE.md  PRD_MVP.md
experiments/: analyze_results.py  create_test_dataset.py  model_config.json  prepare_search_cache.py  run_experiment.py
experiments/results/: gemini-flash_results.json  gemma3_results.json  mamaylm_q_results.json  mamaylm_results.json
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/icons/: generate_icons.py
scripts/: run_all_tests.py  start_api.py
tests/: test_api.py  test_basic.py  test_binary_classifier.py  test_fact_checker.py  test_integration.py  test_trusted_domains.py  test_verification_quality.py
verifai/: __init__.py  graph.py
verifai/nodes/: fact_checker.py  manipulation_classifier.py  manipulation_classifier_binary.py  manipulation_classifier_lora.py  narrative_extractor.py  narrative_extractor_lora.py  verifier.py
verifai/prompts/: __init__.py  fact_checker.py  manipulation_classifier.py  narrative_extractor.py  verifier.py
verifai/utils/: __init__.py  config.py  llm_client.py  logging.py  lora_client.py  trusted_domains.py
